# sv-dashboard-gtk

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: build.yml
assets/: icons.json
assets/windows/fontconfig/: 00-sv-dashboard-cache.conf  10-fontawesome-alias.conf
scripts/: fetch-fontawesome.sh
src/: Desktop.cpp  Desktop.h  DesktopIcon.cpp  DesktopIcon.h  FontRegistry.cpp  FontRegistry.h  Icons.cpp  Icons.h  MainApp.cpp  MainApp.h  MainWindow.cpp  MainWindow.h  RuntimeEnv.cpp  RuntimeEnv.h  main.cpp
